--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,4 @@ github_username:
 markdown: kramdown
 
 paginate: 1
-paginator_path: "sophies-world/page:num"
+paginator_path: "/sophies-world/page:num"
